[gd_scene load_steps=15 format=2]

[ext_resource path="res://minigames/hurdle/hurdle_game.gd" type="Script" id=1]
[ext_resource path="res://minigames/hurdle/green_point_park_2k.hdr" type="Texture" id=2]
[ext_resource path="res://fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://boards/controller/pausemenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://minigames/hurdle/player_hurdle.tscn" type="PackedScene" id=5]
[ext_resource path="res://minigames/hurdle/ground_model.escn" type="PackedScene" id=6]
[ext_resource path="res://minigames/hurdle/ground.shader" type="Shader" id=7]
[ext_resource path="res://minigames/hurdle/asphalt_col.jpg" type="Texture" id=8]
[ext_resource path="res://minigames/hurdle/asphalt_nrm.jpg" type="Texture" id=9]
[ext_resource path="res://minigames/hurdle/asphalt_rgh.jpg" type="Texture" id=10]









[sub_resource type="PanoramaSky" id=1]

radiance_size = 4
panorama = ExtResource( 2 )

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0, 0, 0, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Background" ]

[sub_resource type="BoxShape" id=3]

extents = Vector3( 2, 1, 10 )

[sub_resource type="ShaderMaterial" id=4]

render_priority = 0
shader = ExtResource( 7 )
shader_param/albedo = Color( 1, 1, 1, 1 )
shader_param/specular = 0.5
shader_param/metallic = 0.04
shader_param/roughness = 1.0
shader_param/point_size = 1.0
shader_param/metallic_texture_channel = Plane( 0.333333, 0.333333, 0.333333, 0 )
shader_param/roughness_texture_channel = Plane( 0.333333, 0.333333, 0.333333, 0 )
shader_param/normal_scale = 1.0
shader_param/uv1_scale = Vector3( 2, 0.5, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )
shader_param/speed = 0.2
shader_param/texture_albedo = ExtResource( 8 )
shader_param/texture_roughness = ExtResource( 10 )
shader_param/texture_normal = ExtResource( 9 )
_sections_unfolded = [ "shader_param" ]

[node name="Root" type="Spatial" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Environment" type="WorldEnvironment" parent="." index="0"]

environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="Environment" index="0"]

transform = Transform( -4.37114e-08, 0.499999, -0.866025, 0, 0.866024, 0.5, 0.999999, 2.18557e-08, -3.78552e-08, -3.4, 3, 4.4 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Screen" type="Control" parent="Environment" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Message" type="Label" parent="Environment/Screen" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_top = 128.0
margin_bottom = 186.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Player wins!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="Timer" type="Label" parent="Environment/Screen" index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -110.0
margin_top = 64.0
margin_right = 160.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Timer: 50.0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Margin", "custom_colors", "custom_constants", "custom_fonts" ]

[node name="PauseMenu" parent="Environment/Screen" index="2" instance=ExtResource( 4 )]

visible = false

[node name="Player1" parent="." index="1" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.2, 1 )

[node name="Player2" parent="." index="2" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.2, 2 )

[node name="Player3" parent="." index="3" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.2, 3 )

[node name="Player4" parent="." index="4" instance=ExtResource( 5 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.2, 4 )

[node name="Ground" type="StaticBody" parent="." index="5"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Plane" type="CollisionShape" parent="Ground" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 6.5 )
shape = SubResource( 3 )
disabled = false
_sections_unfolded = [ "Transform" ]

[node name="Mesh" parent="Ground" index="1" instance=ExtResource( 6 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 6.5 )
_sections_unfolded = [ "Transform" ]

[node name="Cube" parent="Ground/Mesh" index="0"]

material/0 = SubResource( 4 )
_sections_unfolded = [ "material" ]

[node name="Hurdle1" type="Spatial" parent="." index="6"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 13 )
_sections_unfolded = [ "Transform" ]

[node name="Hurdle2" type="Spatial" parent="." index="7"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0, 14 )
_sections_unfolded = [ "Transform" ]

[node name="Hurdle3" type="Spatial" parent="." index="8"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 15 )
_sections_unfolded = [ "Transform" ]

[node name="Hurdle4" type="Spatial" parent="." index="9"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 16 )
_sections_unfolded = [ "Transform" ]

[node name="Sun" type="DirectionalLight" parent="." index="10"]

transform = Transform( 0.642788, 0.627507, -0.439385, 0, 0.573576, 0.819152, 0.766044, -0.526541, 0.368688, -6, 4, 3 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0


[editable path="Ground/Mesh"]
